--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+    html {
+        scroll-behavior: smooth;
+    }
     .nav-item {
         @apply px-4 py-1.5 rounded-full text-white/70 text-sm font-semibold hover:bg-white/10 hover:text-white transition duration-300;
+    }
+    .active {
+        @apply bg-white text-gray-900 hover:bg-white/80 hover:text-gray-900;
     }
     .hero-ring {
         @apply absolute inset-0 border-2 top-1/2 left-1/2 -translate-x-1/2 border-2 top-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full border-emerald-300/5 shadow-[0_0_90px_inset] shadow-emerald-300/5;
