refactor: Remove unused code and update footer layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,9 @@
     .hero-ring {
         @apply absolute inset-0 border-2 top-1/2 left-1/2 -translate-x-1/2 border-2 top-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full border-emerald-300/5 shadow-[0_0_90px_inset] shadow-emerald-300/5;
     }
+    .contact {
+        @apply text-white bg-gray-900 inline-flex items-center px-6 h-12 rounded-xl gap-2 w-max border border-gray-900 w-[180px] flex justify-center
+    }
 }
 
 @layer utilities {
